--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,10 @@ header {
     }
   }
 }
+section{
+  display: grid;
+  grid-template-columns: max-content auto;
+}
 aside {
   width: max-content;
   background-color: silver;
