--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ aside {
   background-color: silver;
   display: grid;
   grid-template-columns: 1fr 1fr;
+  height: fit-content;
   button {
     height: 24px;
     width: 24px;
